--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<p>
 								AIR KIT AHU 0-10V to inteligentny moduł sterujący, dedykowany do agregatów skraplających różnych marek. Obsługuje tryb grzania i chłodzenia, automatycznie wykrywa sygnały sterujące i zapewnia płynną regulację wydajności. Przeznaczony do integracji z centralami wentylacyjnymi i systemami CO/CWU.
 							</p>
-							<a class="primary-btn" href="/offer.html">Dowiedz się więcej</a>
+							<a class="primary-btn" href="offer.html">Dowiedz się więcej</a>
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
