--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<p>
 								AIR KIT AHU 0-10V to innowacyjne rozwiązanie stworzone z myślą o integracji z systemami HVAC, CWU i centralami wentylacyjnymi. Urządzenie umożliwia precyzyjne sterowanie mocą i trybem pracy agregatu, wyświetla kluczowe parametry na ekranie OLED oraz zapewnia diagnostykę błędów i stanów alarmowych. Dzięki kompaktowej konstrukcji i automatycznemu rozpoznawaniu sygnałów, montaż jest szybki i bezproblemowy.
 							</p>
-							<a class="text-uppercase primary-btn" href="/offer.html">Dowiedz się więcej</a>
+							<a class="text-uppercase primary-btn" href="offer.html">Dowiedz się więcej</a>
 						</div>
 					</div>
 				</div>	
